Fix bottom navbar overlap by using footer

--- a/style.css
+++ b/style.css
@@ -130,15 +130,18 @@ body {
   }
 }
 
-.bottom-navbar {
+footer {
   position: fixed;
-  left: 0; right: 0; bottom: 0;
+  bottom: 0;
+  left: 0;
   width: 100vw;
+  z-index: 5;
+}
+.bottom-navbar {
+  display: flex;
   height: 62px;
   background: #fff;
   border-top: 1.5px solid #e53935;
-  display: flex;
-  z-index: 1001;
   box-shadow: 0 -2px 12px #e5393530;
   justify-content: space-around;
   align-items: stretch;
